data/objects/AccountContactRelation.object
<CustomObject>
    <fields>
        <fullName>Connection_Role__c</fullName>
        <label>Connection Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>25th Anniversary Specialist Guests</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Assistant Energy Manager</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Billing Contact</fullName>
                </value>
                <value>
                    <fullName>Board Member</fullName>
                </value>
                <value>
                    <fullName>Board President</fullName>
                </value>
                <value>
                    <fullName>Business POC</fullName>
                </value>
                <value>
                    <fullName>Cenergistic Consultant</fullName>
                </value>
                <value>
                    <fullName>Cenergistic Energy Specialist</fullName>
                </value>
                <value>
                    <fullName>Chief Administrator</fullName>
                </value>
                <value>
                    <fullName>Communications POC</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Corporate Office</fullName>
                </value>
                <value>
                    <fullName>Data Clerk</fullName>
                </value>
                <value>
                    <fullName>Data Release Lead</fullName>
                </value>
                <value>
                    <fullName>Dean</fullName>
                </value>
                <value>
                    <fullName>EEM Recruiting Contact</fullName>
                </value>
                <value>
                    <fullName>Energy Specialist</fullName>
                </value>
                <value>
                    <fullName>ES Recruiting Contact</fullName>
                </value>
                <value>
                    <fullName>Head Finance</fullName>
                </value>
                <value>
                    <fullName>Head M&amp;O</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Legal Counsel</fullName>
                </value>
                <value>
                    <fullName>Maintenance POC</fullName>
                </value>
                <value>
                    <fullName>Market Consultant</fullName>
                </value>
                <value>
                    <fullName>Marketer</fullName>
                </value>
                <value>
                    <fullName>NTC Attendee</fullName>
                </value>
                <value>
                    <fullName>NTC Speaker</fullName>
                </value>
                <value>
                    <fullName>President</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Reminder - limited to 255 characters</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Omit_From_Reporting__c</fullName>
        <label>Omit From Reporting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Override__c</fullName>
        <label>Override</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_Strength__c</fullName>
        <label>Relationship Strength</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strong</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transition_Notes__c</fullName>
        <inlineHelpText>Max 255 characters.</inlineHelpText>
        <label>Transition Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Transition_Type__c</fullName>
        <label>Transition Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retiring</fullName>
                </value>
                <value>
                    <fullName>Retiring - NOT Potential EC Candidate</fullName>
                </value>
                <value>
                    <fullName>Retiring - Potential EC Candidate</fullName>
                </value>
                <value>
                    <fullName>Transferring - New Job</fullName>
                </value>
                <value>
                    <fullName>Transferring to Client</fullName>
                </value>
                <value>
                    <fullName>Transferring to Prospect</fullName>
                </value>
                <value>
                    <fullName>Transferring to Remarket</fullName>
                </value>
                <value>
                    <fullName>Transferring to Unknown</fullName>
                </value>
                <value>
                    <fullName>Retiring - NOT Potential MC Candidate</fullName>
                    <isActive>false</isActive>
                    <label>Retiring - NOT Potential MC Candidate</label>
                </value>
                <value>
                    <fullName>Retiring - Potential MC Candidate</fullName>
                    <isActive>false</isActive>
                    <label>Retiring - Potential MC Candidate</label>
                </value>
                <value>
                    <fullName>Transferring - Unknown</fullName>
                    <isActive>false</isActive>
                    <label>Transferring - Unknown</label>
                </value>
                <value>
                    <fullName>Transferring / New Job</fullName>
                    <isActive>false</isActive>
                    <label>Transferring / New Job</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>